--- a/app/globals.css
+++ b/app/globals.css
@@ -3,60 +3,92 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-  }
+    :root {
+      --background: 16 16 48 / 0.3;
+      --background-secondary: 6 6 38 / 0.3;
+      --foreground: 74 74 163 / 0.7;
+      --foreground-secondary: 45 52 127;
+      --border: 141 141 134;
+      --warning: 233 72 8;
+      --success: 39 181 39;
+      --danger: 255 0 0;
+      --info: 53 53 193;
+      --secondary: 255 0 0;
+      --contrast: 245 245 245;
+      --text: 245 235 245;
+      --soil: 84 57 45;
+      --slate-800: 30 41 59;
+      --indigo: 75 0 130;
+  
+      --radius: 0.5rem;
+    }
 
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
+  
+    ::-webkit-scrollbar {
+      width: 12px;
+      height: 12px;
+    }
+  
+    @media screen and (max-width: 768px) {
+      ::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
+      }
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      background-color: rgb(var(--foreground));
+      border-radius: 3px;
+    }
+  
+    ::-webkit-scrollbar-track {
+      background: linear-gradient(to bottom, rgb(var(--slate-800)), rgb(var(--soil)));
+      border-left: 2px solid rgb(var(--border));
+      
+    }
+  
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: rgb(var(--foreground-secondary));
+    }
+  
+    /* Firefox specific */
+    .scrollable-element {
+      scrollbar-width: thin; /* Options: auto, thin */
+      scrollbar-color: #888 #f1f1f1; /* Thumb color and track color */
+    }
+  
+    .smooth:hover {
+      transition: .3s ease-in-out;
+    }
+  
+    
+    .active {
+      background-color: var(--foreground);
+      color: var(--foreground);
+    }
+  
+    .header {
+      background-size: cover;
+      background-position: center;
+  
+      background-color: rgba(var(--background), 0.5);
+    }
+  
+    .fullscreen-bg {
+      position: fixed; /* Ensure it stays fixed on the screen */
+      top: 0;
+      left: 0;
+      width: 100vw; /* Full width of the viewport */
+      height: 100vh; /* Full height of the viewport */
+      background-image: url('/images/MarketMinder_bg.jpg'); /* Update with your image path */
+      background-size: cover; /* Make sure the image covers the whole area */
+      background-position: center; /* Center the image */
+      background-repeat: no-repeat; /* Prevent tiling */
+      background-attachment: fixed; /* Make it non-scrollable */
+      z-index: -1;
+    }
+
+
 }
 
 @layer base {
