--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@theme {
+  --font-titillium-web: "Titillium Web", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-weight-normal: 400;
+  --font-weight-medium: 600;
+  --font-weight-bold: 700;
+}
+
 @layer base {
     :root {
-      --background: 16 16 48 / 0.3;
-      --background-secondary: 6 6 38 / 0.3;
-      --foreground: 74 74 163 / 0.7;
-      --foreground-secondary: 45 52 127;
-      --border: 141 141 134;
+      --background: 0 0 38;
+      --background-secondary: 16 16 48;
+      --foreground: 4 4 16 / 0.7;
+      --foreground-secondary: 5 5 22;
       --warning: 233 72 8;
       --success: 39 181 39;
       --danger: 255 0 0;
@@ -19,7 +26,14 @@
       --soil: 84 57 45;
       --slate-800: 30 41 59;
       --indigo: 75 0 130;
-  
+      --neon-green: 57 255 20 / 0.9;
+      --neon-blue: 15 105 255 / 0.9;
+      --neon-red: 255 5 5 / 0.9;
+      --neon-yellow: 255 255 1 / 0.9;
+      --neon-purple: 140 0 255 / 0.9;
+      --neon-orange: 255 154 0 / 0.9;
+      --neon-pink: 255 20 147 / 0.9;
+      --border-3: 3px;
       --radius: 0.5rem;
     }
 
@@ -66,13 +80,26 @@
       background-color: var(--foreground);
       color: var(--foreground);
     }
-  
-    .header {
-      background-size: cover;
-      background-position: center;
-  
-      background-color: rgba(var(--background), 0.5);
+
+    /* Maintain background color for inputs with values and autofilled inputs */
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+      -webkit-box-shadow: 0 0 0 30px rgb(var(--foreground)) inset !important;
+      -webkit-text-fill-color: rgb(var(--text)) !important;
+      background-color: rgb(var(--foreground)) !important;
     }
+
+    input:not(:placeholder-shown) {
+      background-color: rgb(var(--foreground)) !important;
+    }
+
+    /* Firefox autofill */
+    input:-moz-autofill {
+      background-color: rgb(var(--foreground)) !important;
+    }
+
   
     .fullscreen-bg {
       position: fixed; /* Ensure it stays fixed on the screen */
@@ -92,9 +119,6 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
     @apply bg-background text-foreground;
   }
